# boarai-firmware

./: .clang-format  .gitignore  .gitmodules  Doxyfile  LICENSE
.github/workflows/: ci.yml
cmake/Modules/: AddComposableNode.cmake  CompilerWarnings.cmake  ConanDependencies.cmake
doc/: .gitignore  Pipfile  ScenarioLogicAnalysisUGV.md
doc/source/: conf.py  index.rst
doc/source/analysis/: scenario.rst
src/boarai/: CMakeLists.txt  package.xml
src/boarai/launch/: production.launch.py
src/cmake/: CMakeLists.txt  boarai_cmake-extras.cmake  package.xml
src/control/: CMakeLists.txt  package.xml
src/control/include/: layer_constants.hpp  proportional_controller.hpp
src/control/include/control/: layer_interface.hpp
src/control/include/position_control/: position_control.hpp
src/control/include/velocity_control/: velocity_control.hpp
src/control/launch/: debug.launch.py  production.launch.py
src/control/src/position_control/: position_control.cpp
src/control/src/velocity_control/: velocity_control.cpp  velocity_control_parameter.cpp  velocity_control_services.cpp  velocity_control_subscriptions.cpp  velocity_control_timers.cpp
src/estimation/: CMakeLists.txt  package.xml
src/estimation/include/: layer_constants.hpp
src/estimation/include/estimation/: layer_interface.hpp
src/estimation/include/position_estimator/: position_estimator.hpp
src/estimation/include/velocity_estimator/: velocity_estimator.hpp
src/estimation/launch/: debug.launch.py  production.launch.py
src/estimation/src/position_estimator/: position_estimator.cpp  position_estimator_services.cpp  position_estimator_subscriptions.cpp
src/estimation/src/velocity_estimator/: velocity_estimator.cpp
src/hardware/: CMakeLists.txt  conanfile.txt  package.xml
src/hardware/include/: layer_constants.hpp  motor_control.hpp
src/hardware/include/gps_provider/: gps_provider.hpp  gpsd_client.hpp  gpsmm_adapter.hpp
src/hardware/include/hardware/: layer_interface.hpp
src/hardware/include/imu/: bno055.hpp  i2c_device.hpp  imu.hpp  imu_device.hpp  smbus.h
src/hardware/include/modbuscpp/: address.hpp  client.hpp  connection.hpp  context.hpp  error.hpp  modbuscpp.hpp  rtu_context.hpp  tcp_context.hpp
src/hardware/include/motor_control/: motor_control.hpp
src/hardware/include/roboteq/: channel.hpp  command.hpp  commands.hpp  constants.hpp  driver.hpp  modbus_address.hpp  position.hpp  queries.hpp  query.hpp
src/hardware/include/tank_drive/: tank_drive.hpp
src/hardware/include/tank_drive_debug/: tank_drive_debug.hpp
src/hardware/launch/: debug.launch.py  production.launch.py
src/hardware/src/: hardware.cpp  motor_control.cpp
src/hardware/src/gps_provider/: gps_provider.cpp  gpsd_client.cpp
src/hardware/src/imu/: bno055.cpp  i2c_device.cpp  imu.cpp  imu_publishers.cpp  imu_timers.cpp
src/hardware/src/modbuscpp/: client.cpp  connection.cpp  context.cpp  error.cpp  rtu_context.cpp  tcp_context.cpp
src/hardware/src/motor_control/: motor_control.cpp
src/hardware/src/roboteq/: command.cpp  driver.cpp
src/hardware/src/tank_drive/: tank_drive.cpp  tank_drive_parameter_enum.cpp  tank_drive_parameters.cpp  tank_drive_services.cpp  tank_drive_timers.cpp
src/hardware/src/tank_drive_debug/: tank_drive_debug.cpp  tank_drive_debug_parameter.cpp  tank_drive_debug_publisher.cpp  tank_drive_debug_services.cpp  tank_drive_debug_timers.cpp
src/hardware/test/include/modbuscpp/: test_server.hpp
src/hardware/test/src/modbuscpp/: test_server.cpp  unittests.cpp
src/intelligence/: CMakeLists.txt  package.xml
src/intelligence/include/: layer_constants.hpp
src/intelligence/include/cortex/: cortex.hpp
src/intelligence/include/mode_controller/: mode_controller.hpp
src/intelligence/launch/: production.launch.py
src/intelligence/src/: intelligence.cpp
src/intelligence/src/cortex/: cortex.cpp
src/intelligence/src/mode_controller/: mode_controller.cpp  mode_controller_mode_enum.cpp  mode_controller_services.cpp  mode_controller_subscriptions.cpp  mode_controller_timers.cpp
src/interface/: CMakeLists.txt  package.xml
src/interface/include/: layer_constants.hpp
src/interface/include/gamepad/: gamepad.hpp
src/interface/include/hmi/: hmi.hpp
src/interface/launch/: production.launch.py
src/interface/src/gamepad/: gamepad.cpp
src/interface/src/hmi/: hmi.cpp
src/interface/src/interface/: hmi.cpp
src/support/: CMakeLists.txt  conanfile.txt  package.xml
src/support/cmake/: boarai_support-extras.cmake
src/support/cmake/Modules/: ConanDependencies.cmake  add_composable_node.cmake
src/support/include/support/: enum_utility.hpp  fallible.hpp  fmt_node.hpp  interfaces.hpp  lerp.hpp  messages.hpp  services.hpp  string_utility.hpp  to_string.hpp
src/support/msg/: AvailableModes.msg  EulerOrientation.msg  EulerOrientationStamped.msg  Polar2D.msg  PolarVelocity.msg  Pose.msg  Voltage.msg
src/support/src/: fmt_node.cpp
src/support/srv/: GetEstimatedPosition.srv  GetMaximumAngularVelocity.srv  SetDriveVelocity.srv  SetMode.srv
src/support/test/src/support/: test_server.cpp  unittests.cpp
support/data/: hsr-rapperswil-fake.nmea
support/systemd/: boarai-firmware.service
